@@ -12,6 +12,7 @@ serveraddress = localhost
 run = 100
 help = 0
 reloadscript = 255
+reloadsinglescript = 255
 user = 0
 say = 0
 msg = 0
